--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
-    "cypress": "^4.0.0",
+    "cypress": "4.9.0",
     "typescript": "^3.5.2"
   },
   "devDependencies": {
