--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../tsconfig.json",
+  "files": [
+    "../node_modules/cypress-xpath/src/index.d.ts"
+  ],
   "include": [
     "../node_modules/cypress",
-    "./*/*.ts"
+    "**/*.ts"
   ]
 }
