--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "2.1.2",
     "@types/jest": "24.9.1",
+    "cypress-wait-until": "^1.7.1",
     "cypress-xpath": "^1.6.0",
     "jest": "24.9.0",
     "ts-jest": "24.3.0",
