--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
+    "cy:run": "cypress run",
     "cy:open": "cypress open"
   },
   "dependencies": {
